2011-??-??: 2.08
	js : added js.JQuery
	all : added @:multitype
	js : upgraded js.SWFObject from 1.4.4 inlined to 1.5 embedded
	js : code generator beautify
	all : ensure that modifying returned Type.getEnumConstructs array does not affect enum
	all : allow macro typed parameters (other than Expr)
	flash : added flash11 apis
	neko : added support for https to haxe.Http (using hxssl library)
	all : added haxe.Int64
	all : added haxe.Int32 isNeg,isZero,ucompare, fixed overflows for js/flash8/php
	all : bugfix when optimizing inlined immediate function call
	all : fixed "using" on macro function
	all : allowed member macros functions (called as static)
	neko : added spod_macro support
	neko : allowed serialization of haxe.Int32 (as Int)
	all : fixed invalid optimization of two constant numbers comparison
	flash8 : bugfix Std.parseInt with some hex values
	flash9 : added flash.utils.RegExp
	all : changed @:build behavior, now takes/returns a var with anonymous fields
	all : added @:native support for enums
	neko : changed the result of array-assign expression (was null)
	flash9 : no longer auto create enums from SWF classes
		(need explicit "enum" type patch)
	all : optimized variable tracking/renaming
	all : optimized macro engine (speed x2)
	all : added -D macrotimes support
	all : added untyped __this__ support (prepare for 'this' spec. change)
	flash9 : store resources in bytes tag instead of bytecode
	all : allow $ prefixed identifiers (for macros usage only)
	all : allow to access modules subtype statics with pack.Mod.Type.value

2011-01-30: 2.07
	all : fixed completion support with --remap
	all : added macros, added --interp
	all : removed 'here' special identifier
	neko : fixed neko.Web.getParamsString() returning "null" instead of ""
	flash9 : fixed issue with @:bind
	flash9 : added some missing errors
	flash9 : fixed TypedDictionary.exists
	all : added @:build and @:autoBuild for enums and classes
	neko : Std.parseFloat now returns NaN with invalid string